<resources>
    <string name="app_name">TriviaGame</string>

    <!-- home page / main / game start page -->
    <string name="btnPlay">Play</string>
    <string name="btnHighScore">High-Scores</string>
    <string name="etEnterName">Enter name</string>

    <!-- game play fragment -->
    <string name="tvQuestionNum">Question: 0</string>
    <string name="tvPlayerName">Player</string>
    <string name="tvScore">Score: 0</string>
    <string name="tvQuestion">Question</string>
    <string name="btnAnswer1">Answer 1</string>
    <string name="btnAnswer2">Answer 2</string>
    <string name="btnAnswer3">Answer 3</string>
    <string name="btnAnswer4">Answer 4</string>
    <string name="btnConnectionError">Try Again</string>
    <string name="tvConnectionError">No Connection, please check you have internet access</string>

    <!-- high score / leaderboard fragment -->
    <string name="tvHighscoresHSF">High Scores</string>
    <string name="btnDeleteScores">Delete All Scores</string>
    <!-- game end fragment -->
    <string name="tvUsernameEnd">Username</string>
    <string name="tvEndDisplay">Your score is ....</string>
    <string name="tvEndScore">0</string>
    <string name="btnHomeEnd">Home</string>
    <string name="btnPlayAgain">Play Again</string>
    <string name="btnShare">Share</string>

    <!-- List Items for RecyclerView in High Score-->
    <string name="tv_userScoreListItemName">Name</string>
    <string name="tv_userScoreListItemScore">0</string>
    <!-- bottom navigation -->
    <string name="miBottomNavHome">Home</string>
</resources>