<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameEndFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnShare"
            android:layout_width="196dp"
            android:layout_height="74dp"
            android:text="@string/btnShare"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPlayAgain"
            app:layout_constraintVertical_bias="0.10" />

        <Button
            android:id="@+id/btnHomeEnd"
            android:layout_width="196dp"
            android:layout_height="74dp"
            android:text="@string/btnHomeEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEndScore"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/tvUsernameEnd"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:text="@string/tvUsernameEnd"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tvEndDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvEndDisplay"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsernameEnd"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/tvEndScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvEndScore"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEndDisplay"
            app:layout_constraintVertical_bias="0.05" />

        <Button
            android:id="@+id/btnPlayAgain"
            android:layout_width="196dp"
            android:layout_height="74dp"
            android:text="@string/btnPlayAgain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnHomeEnd"
            app:layout_constraintVertical_bias="0.100000024" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>